1999-06-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Program.m (initModules): Don't use a componentZone for scratchZone.

	* FArguments.m (ADD_COMMON_TEST): Remove.
	(ADD_PRIMITIVE): Use strlen (java_type_signature[fcall_type])
	instead of 1.

	* FArguments.[hm], defobj.h ([FArguments_c -addString:],
	[FArguments_c -addObject:]): New methods.

	* Zone.m ([Zone_c -freeIVars:]): Use componentZone of scratchZone
	to avoid call to self when index is dropped.

	* directory.m (get_base_class_name): New function.
	(java_instantiate_using): Use it.  Tack on "Impl" after "U".
	(java_directory_init): Accomodate Impl suffix.

1999-06-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.h: Undef SIZEOF_LONG before including jni.h.

1999-06-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* DefClass.h (BehaviorPhase_s): Add another filler slot.

	* Archiver.m (SWARMARCHIVER_LISP_SUFFIX, SWARMARCHIVER_HDF5_SUFFIX):
	Prepend ".".
	(defaultAppPath): Off by one error in malloc. 
	Remove addition of `delim' (a ".").

1999-06-13  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* defobj.h (types_t): Add signed and unsigned types.

	* FCall.m (defobj_init_java_call_tables): Add long long entries.
	Treat them as long for now.
	(ffi_types): Treat long long as ffi_type_[us]int64 for now.
	(add_ffi_types): Support long long types.
	([FCall_c -performCall]): Likewise.
	([FCall_c -getRetVal:buf:]): Likewise.

	* FArguments.m (java_type_signature): Add long long entries.
	Treat them as long for now.
	(objc_types): Add long long entries.
	(fcall_type_size): Support long long types.
	([FArguments_c -_setReturnType_:]): Likewise.

	* FArguments.[hm], defobj.h ([FArguments_c -addLongLong:]): 
	([FArguments_c -addUnsignedLongLong:]): New methods.

	* FArguments.h (fcall_type_t): Add signed and unsigned long long.
	(FCALL_TYPE_COUNT): Bump by 2.

1999-06-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Arguments.m (getSwarmPrefix): New function.