@@ -1,3 +1,9 @@
+1999-06-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* Makefile.am (modulemap.c): New target.
+
+	* modulemap.el: New file.
+
 1999-06-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* Program.m (initModules): Don't use a componentZone for scratchZone.
